--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
-html
+html(lang="en" dir="ltr")
   head
-    title= title
+    title= WebDNS
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
